--- a/article.html
+++ b/article.html
@@ -10,10 +10,13 @@
 <body style="background-color: #F2F2F2;">
 
 <header>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark" style="background-color: #025939;">
+    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="res/bootstrap-seeklogo.com.svg" alt="" width="30" height="24">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-explicit text-warning" viewBox="0 0 16 16">
+                    <path d="M6.826 10.88H10.5V12h-5V4.002h5v1.12H6.826V7.4h3.457v1.073H6.826v2.408Z"/>
+                    <path d="M2.5 0A2.5 2.5 0 0 0 0 2.5v11A2.5 2.5 0 0 0 2.5 16h11a2.5 2.5 0 0 0 2.5-2.5v-11A2.5 2.5 0 0 0 13.5 0h-11ZM1 2.5A1.5 1.5 0 0 1 2.5 1h11A1.5 1.5 0 0 1 15 2.5v11a1.5 1.5 0 0 1-1.5 1.5h-11A1.5 1.5 0 0 1 1 13.5v-11Z"/>
+                </svg>
             </a>
             <a class="navbar-brand" href="index.html">
                 Easy Everyday English
@@ -33,13 +36,24 @@
                         <a class="nav-link active" href="article.html">Article</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About us</a>
+                        <a class="nav-link" href="aboutus.html">About us</a>
                     </li>
                 </ul>
                 <div class="d-flex">
-                    <a class="btn  btn-outline-warning me-2 " href="grammar.html">Grammar course</a>
-                    <a class="btn  btn-outline-warning me-2 " href="listerning.html">Listening course</a>
-
+                    <a class="btn  btn-outline-warning me-2 " href="grammar.html">
+                        Grammar course
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
+                            <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+                        </svg>
+                    </a>
+                    <a class="btn  btn-outline-success me-2 " href="listerning.html">
+                        Listening course
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-music-player" viewBox="0 0 16 16">
+                            <path d="M4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V3zm1 0v3h6V3H5zm3 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                            <path d="M11 11a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm-3 2a2 2 0 1 0 0-4 2 2 0 0 0 0 4z"/>
+                            <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H4z"/>
+                        </svg>
+                    </a>
                 </div>
 
             </div>
@@ -53,7 +67,7 @@
         <h1 class="mt-2 mb-3 display-1 ">Articles</h1>
     </div>
     <div class="container ">
-        <div class="row align-content-center">
+        <div class="row">
             <div class="card m-4" style="width: 18rem;">
                 <img src="res/dikaia_roza_rozovyj_kust_122926_1920x1080.jpg" class="card-img-top pt-1" alt="...">
                 <div class="card-body">
@@ -114,7 +128,7 @@
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">News</a></li>
             <li class="nav-item"><a href="article.html" class="nav-link px-2 text-muted">Articles</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About us</a></li>
+            <li class="nav-item"><a href="aboutus.html" class="nav-link px-2 text-muted">About us</a></li>
 
         </ul>
         <p class="text-center text-muted">&copy; 2022 Easy Everyday English</p>
